# Spatial_distancing_PDE_model

./: .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md  buildABMOnServer.sh  startSimulationOnServer.sh
configurations/conSDM/: analyser-config.json  config.json  output-config.json  simulator-config.json
configurations/testSpatialDistancing/: analyser-config.json  config.json  output-config.json  simulator-config.json
python_scripts/: output_graphs.py  ovito_preprocessing.py
src/: CMakeLists.txt  main.cpp
src/analyser/: Analyser.cpp  Analyser.h  InSituMeasurements.cpp  InSituMeasurements.h  histogram_measurement.cpp  histogram_measurment.h  pair_measurement.h  pair_measurment.cpp
src/basic/: CMakeLists.txt  Coordinate3D.cpp  Coordinate3D.h  Randomizer.cpp  Randomizer.h
src/io/: CMakeLists.txt  output_handler.cpp  output_handler.h
src/simulation/: Agent.cpp  Agent.h  AgentManager.cpp  AgentManager.h  AgentProperties.cpp  AgentProperties.h  Algorithms.cpp  Algorithms.h  CMakeLists.txt  Cell.cpp  Cell.h  CellFactory.cpp  CellFactory.h  MoleculeManager.cpp  MoleculeManager.h  Morphology.cpp  Morphology.h  Simulator.cpp  Simulator.h  Site.cpp  Site.h
src/simulation/morphology/: MorphologyElement.cpp  MorphologyElement.h  SphereRepresentation.cpp  SphereRepresentation.h  SphericalMorphology.cpp  SphericalMorphology.h
src/simulation/site/: CuboidSite.cpp  CuboidSite.h
src/utils/: io_util.cpp  io_util.h  macros.h  misc_util.cpp  misc_util.h  time_util.cpp  time_util.h
test/: CMakeLists.txt
test/src/: testConfigurations.cpp  testConfigurations.h  testUnits.cpp
(+1 files in other folders)
